--- a/01-ImplicitIntentDemo/app/src/main/AndroidManifest.xml
+++ b/01-ImplicitIntentDemo/app/src/main/AndroidManifest.xml
@@ -20,6 +20,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.SEND"/>
+                <action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.PICK" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*" />
+                <!-- <data android:mimeType="text/plain" /> -->
+            </intent-filter>
+
         </activity>
     </application>
 
