--- a/01-CallLogger/app/src/main/AndroidManifest.xml
+++ b/01-CallLogger/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-feature
         android:name="android.hardware.telephony"
-        android:required="false" />
+        android:required="true" />
+    <uses-permission android:name="android.permission.NEW_OUTGOING_CALL" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
 
     <application
@@ -30,7 +33,8 @@
         -->
 
         <receiver android:name=".OutCallReceiver"
-            android:exported="true">
+            android:exported="true"
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
