--- a/01-CallLogger/app/src/main/AndroidManifest.xml
+++ b/01-CallLogger/app/src/main/AndroidManifest.xml
@@ -5,9 +5,6 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="true" />
-    <uses-permission android:name="android.permission.NEW_OUTGOING_CALL" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
 
     <application
@@ -21,25 +18,10 @@
         android:theme="@style/Theme.CallLogger"
         tools:targetApi="31">
 
-        <!--
-        <service
-            android:name=".MyCallRedirectionService"
-            android:exported="true"
-            android:permission="android.permission.BIND_CALL_REDIRECTION_SERVICE">
-            <intent-filter>
-                <action android:name="android.telecom.CallRedirectionService" />
-            </intent-filter>
-        </service>
-        -->
-
         <receiver android:name=".OutCallReceiver"
-            android:exported="true"
-            android:enabled="true">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
 
