--- a/01-10-BroadcastReceiverTest/app/build.gradle
+++ b/01-10-BroadcastReceiverTest/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.cubixedu.broadcastreceivertest"
-        minSdk 27
+        minSdk 28
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding = true
     }
 }
 
