01. -10- BroadcastReceiverTest -  My broadcast send

--- a/01-10-BroadcastReceiverTest/app/src/main/AndroidManifest.xml
+++ b/01-10-BroadcastReceiverTest/app/src/main/AndroidManifest.xml
@@ -53,6 +53,13 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name="MyBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.cubixedu.broadcastreceivertest.NOTIFY"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
