--- a/02-16-DynamicFragmentDemo/settings.gradle
+++ b/02-16-DynamicFragmentDemo/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "DynamicFragementDemo"
+rootProject.name = "DynamicFragmentDemo"
 include ':app'
