--- a/03-28-LocationAndMapDemo/app/src/main/AndroidManifest.xml
+++ b/03-28-LocationAndMapDemo/app/src/main/AndroidManifest.xml
@@ -15,16 +15,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LocationAndMapDemo"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
         <activity
-            android:name=".MainActivity"
+            android:name=".MapsActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_maps" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+        </activity>
+
     </application>
 
 </manifest>
