--- a/03-28-LocationAndMapDemo/app/build.gradle
+++ b/03-28-LocationAndMapDemo/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    implementation 'com.google.maps.android:android-maps-utils:2.3.0'
 }
