05. -44- FirebaseForumDemo - FirebaseMessaging, authentication

--- a/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
+++ b/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ForumActivity"
+            android:exported="false"
+            android:label="@string/title_activity_forum"
+            android:theme="@style/Theme.FirebaseForumDemo.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
