--- a/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
+++ b/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FirebaseForumDemo"
         tools:targetApi="31">
         <activity
+            android:name=".CreatePostActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -25,8 +28,7 @@
             android:name=".ForumActivity"
             android:exported="false"
             android:label="@string/title_activity_forum"
-            android:theme="@style/Theme.FirebaseForumDemo.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.FirebaseForumDemo.NoActionBar"></activity>
     </application>
 
 </manifest>
