--- a/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
+++ b/05-44-FirebaseForumDemo/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,7 +35,7 @@
             android:name=".ForumActivity"
             android:exported="false"
             android:label="@string/title_activity_forum"
-            android:theme="@style/Theme.FirebaseForumDemo.NoActionBar"></activity>
+            android:theme="@style/Theme.FirebaseForumDemo.NoActionBar" />
     </application>
 
 </manifest>
