--- a/05-44-FirebaseForumDemo/app/build.gradle
+++ b/05-44-FirebaseForumDemo/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
     implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
 }
