--- a/05-44-FirebaseForumDemo/app/build.gradle
+++ b/05-44-FirebaseForumDemo/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
