--- a/05-55-GoodBuyDemo/app/build.gradle
+++ b/05-55-GoodBuyDemo/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 
 android {
     namespace 'com.cubix.goodbuydemo'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.cubix.goodbuydemo"
         minSdk 28
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -31,6 +31,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -38,6 +41,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
