--- a/05-55-GoodBuyDemo/app/src/main/AndroidManifest.xml
+++ b/05-55-GoodBuyDemo/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.GoodBuyDemo"
         tools:targetApi="31">
         <activity
+            android:name=".CreateAdsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdsScrollingActivity"
             android:exported="false"
             android:label="@string/title_activity_ads_scrolling"
