--- a/practice/CodelabLocationDemo/app/src/main/AndroidManifest.xml
+++ b/practice/CodelabLocationDemo/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
         tools:ignore="CoarseFineLocation" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -29,7 +30,8 @@
         <service
             android:name="com.cubix.codelablocationdemo.ForegroundOnlyLocationService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
