--- a/07-79-TrackLocationService/app/src/main/AndroidManifest.xml
+++ b/07-79-TrackLocationService/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrackLocationService"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,7 +35,7 @@
         </activity>
 
         <service
-            android:name="com.cubix.tracklocationservice.service.TrackLocationService"
+            android:name=".service.TrackLocationService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="location" />
