--- a/08-98-WeatherDemo_MVVM_Starter/app/src/main/AndroidManifest.xml
+++ b/08-98-WeatherDemo_MVVM_Starter/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Glide not load https - usesCleartextTraffic set true -->
+    <!-- Glide not load https - usesCleartextTraffic set true
+        not working:
+        android:networkSecurityConfig="@xml/network_security_config"
+    -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
