10. -112- Házi feladat - add user reg and login

--- a/10-b2-TaxiDemo/app/src/main/AndroidManifest.xml
+++ b/10-b2-TaxiDemo/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.RegisterActivity"/>
+        <activity android:name=".ui.MapsActivity"/>
+        <activity android:name=".ui.DriveActivity"/>
+
     </application>
 
 </manifest>
