--- a/10-b2-TaxiDemo/app/src/main/AndroidManifest.xml
+++ b/10-b2-TaxiDemo/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,8 +34,12 @@
         </activity>
 
         <activity android:name=".ui.RegisterActivity"/>
-        <activity android:name=".ui.MapsActivity"/>
-        <activity android:name=".ui.DriveActivity"/>
+
+        <activity android:name=".ui.MapsActivity"
+            android:theme="@style/Theme.Taxidemo.NoActionBar" />
+
+        <activity android:name=".ui.DriveActivity"
+            android:theme="@style/Theme.Taxidemo.NoActionBar" />
 
     </application>
 
