--- a/08-98-WeatherDemo_MVVM_Starter/app/src/main/AndroidManifest.xml
+++ b/08-98-WeatherDemo_MVVM_Starter/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
     -->
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
